--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 #requirements.txt
 snowflake-connector-python
-charset-normalizer~=2.0.0 
+charset-normalizer~=2.0.0
+cffi==1.15.0 pyarrow==6.0.1 
+
